--- a/Reports/bibtex.bib
+++ b/Reports/bibtex.bib
@@ -28,3 +28,9 @@
    howpublished = {\textless\url{http://mmix.cs.hm.edu/doc/mmix-refcard-a4.pdf}
    \textgreater [Access 24 August 2015]}
 }
+@misc{numlangs,
+   author={Bill Kinnersley},
+   title={The Language List},
+   howpublished = {\textless\url{http://people.ku.edu/~nkinners/LangList/Extras/langlist.htm}
+   \textgreater [Access 7 September 2015]}
+}
