One days progress

--- a/Reports/Report.tex
+++ b/Reports/Report.tex
@@ -3,6 +3,8 @@
 \usepackage{appendix}
 \usepackage{listings}
 \usepackage{fancybox}
+\usepackage{graphicx}
+\graphicspath{ {images/} }
 \usepackage{parskip}
 \usepackage{index}
 \makeindex
@@ -81,6 +83,12 @@ All definition of an MMIX computer come directly from either \cite{knuth:aocp1} 
 %% DO I NEED A SECTION HERE TO TALK ABOUT ANY ISSUES AND THOUGHTS RESULTING IN THE DEVELOPMENT, ALONG WITH THE INTEGRATION OF THE PARTS
 \chapter{Graphical User Interface}
 \section{Introduction}
+\begin{figure}[h!]
+\centering
+\includegraphics[width=\textwidth]{GUISample}
+\caption{GUI Sample Screenshot}
+\end{figure}
+
 \section{User Interface Design}
 \subsection{Console Panel}
 \subsection{Controls Panel}
