Progress of Report

--- a/Reports/bibtex.bib
+++ b/Reports/bibtex.bib
@@ -42,3 +42,28 @@
  publisher = {Addison-Wesley Longman Publishing Co., Inc.},
  address = {Boston, MA, USA},
 } 
+@misc{turner:why,
+   author={Turner, D.},
+   year=1990,
+   title={Research Topics in Functional Programming, Addison-Wesley. },
+   howpublished = {Available through \textless \url{http://www.cs.utexas.edu/~shmat/courses/cs345/whyfp.pdf}}
+   \textgreater [Accessed 2 April 2013]
+}
+@misc{jeliot:ref,
+   author={University of Joensuu},
+   year=2007,
+   title={Jeliot 3},
+   howpublished={Available at: \textless\url{http://cs.joensuu.fi/jeliot/}}\textgreater [Accessed 5 April 2013]
+}
+@misc{alex,
+   author={Simon Marlow},
+   title={Alex: A lexical analyser generator for Haskell},
+   howpublished={\textless\url{https://www.haskell.org/alex/}
+   \textgreater [Access 7 September 2015]}
+}
+@misc{happy,
+   author={Andy Gill and Simon Marlow},
+   title={Happy: The Parser Generator for Haskell},
+   howpublished={\textless\url{https://www.haskell.org/happy/}
+   \textgreater [Access 7 September 2015]}
+}
