--- a/Reports/Report.tex
+++ b/Reports/Report.tex
@@ -24,7 +24,7 @@
 	\centering
 	{\bfseries Component Based MMIX Simulator using Multiple Programming Paradigms \par}
 	\vspace{1cm}
-	{A dissertation submitted in partial fulfilment of the requirements for the MSc in Advanced Computing Technologies\par}
+	{A dissertation submitted in partial fulfillment of the requirements for the MSc in Advanced Computing Technologies\par}
 	\vspace{1.5cm}
 	{by Stephen Edmans\par}
 	\vspace{2cm}
@@ -58,15 +58,42 @@ The purpose of this project is to examine this approach. The application that we
 \newpage
 \listoffigures
 \newpage
-\chapter*{Acknowledgements}
-\addcontentsline{toc}{chapter}{Acknowledgements}
+\chapter*{Acknowledgments}
+\addcontentsline{toc}{chapter}{Acknowledgments}
 \chapter{Introduction}
-All definition of an MMIX computer come directly from either \cite{knuth:aocp1} or \cite{knuth:aocp2}
+As software systems get larger and more complex there is a need to handle this complexity. There is a prevailing design paradigm, which addresses these issues, that is to break these systems up into smaller components.  This is a sentiment mentioned by Turner~\cite{turner:why}  He calls these components ``collections of modules'', these components will interact with each other to make the complete system. 
+
+When you have control over the development of more than one of these components it is a traditional approach to use a single programming paradigm for your components. There is, however, no reason that you cannot use different languages and paradigms for these for each components. The goal of this project is to create a relatively complex system that is made up of multiple components where each component uses the most appropriate programming paradigm for the relevant component.
+
+The system that we have created in this project was inspired by Jeliot~\cite{jeliot:ref}, which is a tool that is used as an aid in the teaching of Java. The Jeliot system allows a user to give it a piece of Java source code and it will show the user what the underlying java virtual machine is doing when it runs the code.
+
+In his seminal work The Art of Computer Programming~\cite{knuth:aocp1} Professor Donald Knuth designed an artificial machine language that he called MIX. In a later volume of his work Professor Knuth updated this machine architecture, which he calls MMIX. He later detailed this new version of the architecture in a fascicle~\cite{knuth:aocp2}. This project will create a system that take MMIX assembly code and shows the user, graphically, what the simulated machine is doing.
+
 \chapter{Assembler}
 \section{Introduction}
-\section{Executable}
-%% HOW WE RUN THE ASSEMBLER, WHAT THE PARAMETERS ARE & WHAT THE OUTPUT IS
+The first component that we developed takes a text file containing the MMIX assembly language code and translated it into a binary representation of the code.  This component it typically called a \textit{compiler}, to quote \cite{dragon}
+
+\begin{quote}
+A compiler is a program that can read a program in one language -- the \textit{source} language -- and translate it into an equivalent program in another language -- the \textit{target} language.
+\end{quote}
+
+A compiler operates as a series of phases, each of which transforms one representation of the source program into another. A typical decomposition of a compiler into phases, taken from \cite{dragon} is shown in Figure~\ref{CompilerPhases}.
+\begin{figure}[ht!]
+\centering
+\includegraphics[width=\textwidth]{PhasesOfACompiler}
+\caption{Phases of a compiler}
+\label{CompilerPhases}
+\end{figure}
+
+A number if these phases are used to convert a higher level language down into a specific machine language.  In this project we already start with a machine language, which means that we do not need these phases. A program that takes an assembly language file and translates it into machine language is typically called an \textit{assembler}.
+
+The four phases that we need for our project are Lexical Analysis, Syntax Analysis, Semantic Analysis and Code Generation. There are two of these phases, syntax analysis and semantic analysis, which are usually combined into a single phase, which is typically called a \textit{Parser}.
+
+The first thing that we need to do is decide which programming language is the most appropriate for this component. The component takes a fixed input and always produces the same output. The component does not contain any user interaction and it does not need a user interface. These requirements led us to choose a functional language for this component. The language we chose was Haskell.
+
+We describe how each of these phases are implemented in the next few sections.
 \section{Lexer}
+The initial phase of compilation, lexical analysis, takes a stream of characters and converts them into tokens. Lexical analysis is a well know problem and there are many tools that have been created to make this task simpler. 
 \section{Parser}
 \section{Code Generation}
 \subsection{Symbol Table}
@@ -79,6 +106,8 @@ All definition of an MMIX computer come directly from either \cite{knuth:aocp1} 
 \subsection{Handling Operands}
 \subsection{Assembler Directives}
 \subsection{Generating the Output}
+\section{Executable}
+%% HOW WE RUN THE ASSEMBLER, WHAT THE PARAMETERS ARE & WHAT THE OUTPUT IS
 \section{Component Testing}
 %% DO I NEED A SECTION HERE TO TALK ABOUT ANY ISSUES AND THOUGHTS RESULTING IN THE DEVELOPMENT, ALONG WITH THE INTEGRATION OF THE PARTS
 \chapter{Graphical User Interface}
@@ -86,7 +115,7 @@ All definition of an MMIX computer come directly from either \cite{knuth:aocp1} 
 \begin{figure}[h!]
 \centering
 \includegraphics[width=\textwidth]{GUISample}
-\caption{GUI Sample Screenshot}
+\caption{GUI Sample Screen shot}
 \end{figure}
 
 \section{User Interface Design}
@@ -100,14 +129,16 @@ All definition of an MMIX computer come directly from either \cite{knuth:aocp1} 
 \section{Component Testing}
 \chapter{Virtual Machine}
 \section{Introduction}
-Arhictecure of a computer  %% FIND QUOTATION
+All definition of an MMIX computer come directly from either \cite{knuth:aocp1} or \cite{knuth:aocp2}
+
+Architecture of a computer  %% FIND QUOTATION
 CPU, ALU, Memory, Secondary Storage, IO Devices
 
-The virtaul machine we are developing will only consist of a CPU and memory.
+The virtual machine we are developing will only consist of a CPU and memory.
 
-The way that memory is organised can be considered a hierachy, to quote Aho et al\cite{dragon}
+The way that memory is organized can be considered a hierarchy, to quote Aho et al\cite{dragon}
 \begin{quotation}
-A memory hierachy consists of several levels of storage with different sppeds and sizes, with the levels closest to the processor being the fastest but smallest... Memory hierarchies are found in all machines. A processor usually has a small number of registers consisting of hundres of bytes, several levels of caches containing kilobytes to megabytes, physical memory containing megabytes to gigabytes, and finally secondary storage that contains gigabytes and beyond.
+A memory hierarchy consists of several levels of storage with different speeds and sizes, with the levels closest to the processor being the fastest but smallest... Memory hierarchies are found in all machines. A processor usually has a small number of registers consisting of hundreds of bytes, several levels of caches containing kilobytes to megabytes, physical memory containing megabytes to gigabytes, and finally secondary storage that contains gigabytes and beyond.
 \end{quotation}
 For this project we will only be considering the physical memory and the registers.
 
@@ -176,7 +207,7 @@ rZZ & Z Operand\\
 \end{figure}
 rA Arithmetic Status Register
 
-least signficant byte contains eight event bits. DVWIOUZX
+least significant byte contains eight event bits. DVWIOUZX
 
 \begin{center}
 \begin{tabular}{ c l }
