--- a/Reports/bibtex.bib
+++ b/Reports/bibtex.bib
@@ -17,6 +17,7 @@
 	year={1990}
 }
 @misc{akka,
+   author={Typesafe Inc},
    title={Akka Toolkit},
    howpublished = {\textless\url{http://akka.io/}
    \textgreater [Access 24 August 2015]}
